some config changes in permissions

--- a/Permissions/Grpc.Dotnet.Permissions.Server/appsettings.json
+++ b/Permissions/Grpc.Dotnet.Permissions.Server/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "RpcServer": {
     "Host": "127.0.0.1",
-    "Port": ""
+    "Port": "43002"
   },
   "Kestrel": {
     "EndpointDefaults": {
