--- a/Shared/Tests/IntegrationTests/Grpc.Dotnet.Shared.IntegrationTests.csproj
+++ b/Shared/Tests/IntegrationTests/Grpc.Dotnet.Shared.IntegrationTests.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.1.1" />
+    <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Shouldly" Version="3.0.2" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
