--- a/Shared/Helpers/Grpc.Dotnet.Shared.Helpers.csproj
+++ b/Shared/Helpers/Grpc.Dotnet.Shared.Helpers.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Rpc\Server\RpcServerBuilder.cs" />
+    <Compile Remove="Rpc\Server\RpcServerHostedService.cs" />
+    <Compile Remove="Rpc\Server\RpcServerServiceCollectionExtensions.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
   <ItemGroup>
